publish the com.taif:jnc as com.celeral so that the later netconf-async could be used as a drop in replacement